created a parent pom.xml and made it easy to download and build from source