@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~ Copyright 2016 Benjamin Sautner
+  ~
+  ~    Licensed under the Apache License, Version 2.0 (the "License");
+  ~    you may not use this file except in compliance with the License.
+  ~    You may obtain a copy of the License at
+  ~
+  ~        http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~    Unless required by applicable law or agreed to in writing, software
+  ~    distributed under the License is distributed on an "AS IS" BASIS,
+  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~    See the License for the specific language governing permissions and
+  ~    limitations under the License.
+  -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -42,7 +58,7 @@
         <spring.version>4.2.3.RELEASE</spring.version>
 
         <jetty-jmx.version>8.1.15.v20140411</jetty-jmx.version>
-        <nimbits_version>3.9.29</nimbits_version>
+        <nimbits_version>3.9.31</nimbits_version>
         <datanucleus.version>3.1.2</datanucleus.version>
     </properties>
 
@@ -409,7 +425,7 @@
                 <artifactId>gwt-maven-plugin</artifactId>
                 <version>2.5.1</version>
                 <configuration>
-                    <extraJvmArgs>-XX:MaxPermSize=512m -Xmx1024m</extraJvmArgs>
+                    <extraJvmArgs>-Xmx1024m</extraJvmArgs>
 
                     <compileSourcesArtifacts>
 
